redhat/ocp4/4.3/poc.sc/zte.yaml/ott/ott-service.tcp.route.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: slbl7-001-service
spec:
  selector:
    pod: slbl7-001
  ports:
    - port: 6420
      protocol: TCP
      targetPort: 6420
---
apiVersion: v1
kind: Service
metadata:
  name: ottcache-001-service
spec:
  selector:
    pod: ottcache-001
  ports:
    - port: 6620
      protocol: TCP
      targetPort: 6620
---
apiVersion: v1
kind: Service
metadata:
  name: ottcache-002-service
spec:
  selector:
    pod: ottcache-002
  ports:
    - port: 6620
      protocol: TCP
      targetPort: 6620
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: slbl7-001
  annotations:
    haproxy.router.openshift.io/wzh-router-name: "wzh-router-01"
    haproxy.router.openshift.io/external-tcp-port: "6420"
spec:
  to:
    kind: Service
    name: slbl7-001-service
  port:
    targetPort: 6420
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ottcache-001
  annotations:
    haproxy.router.openshift.io/wzh-router-name: "wzh-router-01"
    haproxy.router.openshift.io/external-tcp-port: "6620"
spec:
  to:
    kind: Service
    name: ottcache-001-service
  port:
    targetPort: 6620
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ottcache-002
  annotations:
    haproxy.router.openshift.io/wzh-router-name: "wzh-router-02"
    haproxy.router.openshift.io/external-tcp-port: "6620"
spec:
  to:
    kind: Service
    name: ottcache-002-service
  port:
    targetPort: 6620
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
