redhat/ocp4/4.3/poc.sc/zte.yaml/ott/ott-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: slbl7-001-service
spec:
  selector:
    pod: slbl7-001
  ports:
    - port: 6420
      protocol: TCP
      targetPort: 6420
---
apiVersion: v1
kind: Service
metadata:
  name: ottcache-001-service
spec:
  selector:
    pod: ottcache-001
  ports:
    - port: 6620
      protocol: TCP
      targetPort: 6620
---
apiVersion: v1
kind: Service
metadata:
  name: ottcache-002-service
spec:
  selector:
    pod: ottcache-002
  ports:
    - port: 6620
      protocol: TCP
      targetPort: 6620
---
apiVersion: v1
kind: Route
metadata:
  name: slbl7-001
spec:
  to:
    kind: Service
    name: slbl7-001-service
---
apiVersion: v1
kind: Route
metadata:
  name: ottcache-001
spec:
  to:
    kind: Service
    name: ottcache-001-service
---
apiVersion: v1
kind: Route
metadata:
  name: ottcache-002
spec:
  to:
    kind: Service
    name: ottcache-002-service
